docs/YCCARD/YCCARD.h

	EXTERN	HANDLE __stdcall OpenComm(int CommPort);
    EXTERN	int __stdcall CloseComm(HANDLE icdev);
    EXTERN	int __stdcall rf_beep(HANDLE icdev,unsigned short _Msec);
    EXTERN	int __stdcall ReadCard_ID(HANDLE icdev, unsigned char *TagType, unsigned long *Snr);
    EXTERN	int __stdcall ReadCard_ID_NEW(HANDLE icdev,unsigned char *TagType,unsigned long *Snr);
    EXTERN	int __stdcall Query_Card_Type(HANDLE icdev,LPINT SysType,LPINT CardType,unsigned long * CardSerno,unsigned int *OPT_Num ,int WaitTime,unsigned char *user_code_new);
    EXTERN	int __stdcall Query_Pos_UserCard12(HANDLE icdev,LPINT CardType,LPINT OPT_Num,LPINT Serno,LPSTR Cardno,LPINT UserType,unsigned long * CardSerno,LPINT ChkSum1,LPINT Value1,LPINT LastPay1, LPINT Count1,LPINT Consume_Add1,LPINT ChkSum2,LPINT Value2,LPINT LastPay2, LPINT Count2,LPINT Consume_Add2,unsigned long *use_term,LPINT AddCount,int WaitTime,unsigned char * user_code_new);
    EXTERN	int __stdcall RST_Pos_OPTCard12(HANDLE icdev,unsigned int CardSerno,int WaitTime ,unsigned char *user_code_new);
    EXTERN	int __stdcall RST_Pos_UserCard12(HANDLE icdev, unsigned int CardSerno, int WaitTime, unsigned char *user_code_new);
    EXTERN	int __stdcall WRT_UserCard_Term(HANDLE icdev,int Systype,unsigned long useterm,unsigned int CardSerno,int WaitTime);
    EXTERN	int __stdcall WRT_Pos_UserCard_AddCount12(HANDLE icdev, int Value, unsigned int CardSerno, int WaitTime);
    EXTERN	int __stdcall Init_Pos_UserCard12(HANDLE icdev,int Serno,LPCSTR Cardno,int UserType,int WaitTime,unsigned long * CardSerno,unsigned long use_term ,unsigned char * user_code_new);
    EXTERN	int __stdcall Init_Pos_OPTCard12(HANDLE icdev, int OPT_Num, int WaitTime, unsigned long * CardSerno, unsigned char *user_code_new);
    EXTERN	int __stdcall Change_Pos_UserType12_NEW(HANDLE icdev,int * Old_UserType,int UserType ,int Systype);
    EXTERN	int __stdcall Init_Js_UserCard(HANDLE icdev,int Serno,LPCSTR Cardno,int UserType,unsigned long * CardSerno ,unsigned char * user_code_new);
	EXTERN	int __stdcall Init_Js_UserCard_N(HANDLE icdev,int Serno,LPCSTR Cardno,int UserType,int CardBlance,int ChargeTimes,unsigned long * CardSerno ,unsigned char * user_code_new);
    EXTERN	int __stdcall WRT_Js_UserCard_AddCount(HANDLE icdev,int Blance,char *ChargeDateTime,unsigned long CardSerno);
    EXTERN	int __stdcall QueryJsCard(HANDLE icdev,LPINT CardType,LPINT OPT_Num,LPINT Serno,LPSTR Cardno,unsigned long * CardSerno,LPINT Value,LPINT Count, LPINT UserType,int WaitTime ,unsigned char * user_code_new);
    EXTERN	int __stdcall RSTJsUserCard(HANDLE icdev,unsigned int CardSerno ,unsigned char *user_code_new);
    EXTERN	int __stdcall Make_UserCard_New091102(HANDLE icdev, unsigned long Value, unsigned long Systype, unsigned long CardSerno, unsigned long *Card_Value1, unsigned long *Card_Value2, unsigned long *Card_Value, unsigned long WaitTime );